--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html>
+<body bgcolor="#FAEBD7">
 <head>
-	<title>Justin</title>
+	<title>MomBob</title>
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 20px 30px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+</style>
+
+
+
+
+
 </head>
+
+
+
 <body>
-<p>
-	Hello World!
-</p>
+	<body background="background.png">
+ 	<img src="logo.png" alt="logo" style="float:right;width:70px;height:60px;">
+
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">Store Data</a></li>
+  <li><a href="#contact">Contact Us</a></li>
+  <li><a href="#about">About Us</a></li>
+</ul>
+
+
+
 </body>
 </html>
