--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ li a:hover:not(.active) {
 
 
 <body>
+
 	<body background="background.png">
  	<img src="logo.png" alt="logo" style="float:right;width:70px;height:60px;">
 
@@ -52,7 +53,8 @@ li a:hover:not(.active) {
   <li><a href="#about">About Us</a></li>
 </ul>
 
-
-
+<img src="mapPic.jpg" alt="mapPic" style="width:1000px;height:700px;" usemap="#mapPic" />
+<map name="mapPic">
+	<area shape="circle" coords="670,450,75" href="http://www.naver.com/" title="Bellevue" alt="Bellevue">
 </body>
 </html>
